@@ -1,3 +1,8 @@
+2007-11-27  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c: remove unneeded call in Tcl_CreateInterp,
+	add comments
+
 2007-11-27  Don Porter	<dgp@users.sourceforge.net>
 
 	* win/tclWinSock.c:	Add mising encoding conversion of the [info
